--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "autobidsx",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "assert": "^2.0.0",
     "axios": "^0.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.5"
+    "mongoose": "^5.10.9",
+    "nodemon": "^2.0.5",
+    "stockx-api": "^1.0.9"
   }
 }
